[package]
name = "cefet"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenv = "0.15"
serde = { version = "1.0.215" , features = ["derive"] }
serde_json = "1.0.133"
tokio = {version = "1.41.1", features = ["full"] }
chrono = {version = "0.4.38", features = ["serde"] }
regex = "1.11.1"
